# Demo-MInuit2-MMA

./: README.md
MMA/: Fit.nb
Minuit2_Cxx/: CMakeCache.txt  CMakeLists.txt  Fit  Fit.cxx  Fit.h  Makefile  Minout.txt  cmake_install.cmake
